--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -7,5 +7,7 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <a href="students" class="button">Go to Students</a>
+    
   </body>
 </html>
